feat(core): Add testcase for score, auth

--- a/.env.test
+++ b/.env.test
@@ -1,19 +1,24 @@
+# Application
 NODE_ENV=test
-PORT=3001
+PORT=3000
 PREFIX=api/v1
 
-# Test containers will override these
+# Database
 DB_HOST=localhost
-DB_PORT=33060
-DB_USERNAME=root
-DB_PASSWORD=test
-DB_DATABASE=leaderboard_test
+DB_PORT=3306
+DB_USERNAME=leaderboard_user
+DB_PASSWORD=leaderboard_pass
+DB_DATABASE=leaderboard
 
+# Redis
 REDIS_HOST=localhost
-REDIS_PORT=63790
+REDIS_PORT=6379
 
+# Rate Limiting
 RATE_LIMIT_TTL=60
-RATE_LIMIT_MAX=10
+RATE_LIMIT_MAX=20
+
+# Score Validation
 MAX_SCORE=1000000
 SCORE_ANOMALY_THRESHOLD=3
 
