--- a/jest.config.json
+++ b/jest.config.json
@@ -6,9 +6,15 @@
     "^.+\\.(t|j)s$": "ts-jest"
   },
   "collectCoverageFrom": [
-    "**/*.(t|j)s",
-    "!**/*.spec.ts",
-    "!**/*.e2e-spec.ts",
+    "src/**/*.(t|j)s",
+    "!src/**/*.spec.ts",
+    "!src/**/*.module.ts",
+    "!src/main.ts",
+    "!src/database/**",
+    "!src/config/**",
+    "!src/common/interceptors/logging.interceptor.ts",
+    "!src/common/interceptors/performance.interceptor.ts",
+    "!src/modules/cache/cache.health.ts",
     "!**/node_modules/**",
     "!**/dist/**"
   ],
@@ -16,5 +22,13 @@
   "testEnvironment": "node",
   "moduleNameMapper": {
     "^src/(.*)$": "<rootDir>/src/$1"
+  },
+  "coverageThreshold": {
+    "global": {
+      "branches": 75,
+      "functions": 80,
+      "lines": 80,
+      "statements": 80
+    }
   }
 }
