--- a/jest.config.json
+++ b/jest.config.json
@@ -30,5 +30,8 @@
       "lines": 80,
       "statements": 80
     }
-  }
+  },
+  "testTimeout": 120000,
+  "detectOpenHandles": true,
+  "forceExit": true
 }
